--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,11 @@
 @use "variables";
 
+@mixin media-query($media: 480px) {
+  @media screen and (max-width: $media) {
+    @content;
+  }
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -7,42 +13,68 @@
 }
 
 .header__container {
-  width: 1200px;
+  width: 100vw;
   height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 24px;
+  
+  
 }
 
 .header__logo__container {
   display: flex;
   justify-content: start;
   width: 20%;
+  
+  @include media-query(640px) {
+    width: 50%;
+  }
 
   p {
     color: variables.$text__color;
     font-size: 2rem;
+    
+    @include media-query(640px) {
+      font-size: 1.2rem;
+    }
   }
 }
 
 .header__nav__container {
   width: 100%;
+  @include media-query(640px) {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    height: 40px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: variables.$primary__color;
+    z-index: 5;
+    
+  }
 
   .header__navbar {
+
     ul {
       display: flex;
       justify-content: start;
 
       li {
-        color: variables.$text__color;
-        padding: 8px 15px;
-        font-size: 0.8rem;
-        cursor: pointer;
+        a {
+          color: variables.$text__color;
+          padding: 8px 15px;
+          font-size: 0.8rem;
+          cursor: pointer;
 
-        &:hover {
-          color: variables.$tertiary__color;
+          &:hover {
+            color: variables.$tertiary__color;
+          }
         }
-        
       }
     }
   }
@@ -51,8 +83,11 @@
 .header__button__container {
   display: flex;
   justify-content: end;
-  align-items:center;
+  align-items: center;
   width: 25%;
+  @include media-query(640px) {
+    width: 50%;
+  }
 
   .header__button {
     padding: 8px 30px;
@@ -65,6 +100,11 @@
     border: none;
     background-color: variables.$tertiary__color;
     cursor: pointer;
+
+    
+    @include media-query(640px) {
+      font-size: 0.6rem;
+    }
 
     &:hover {
       background-color: variables.$contrast__color;
