--- a/css/style.css
+++ b/css/style.css
@@ -830,4 +830,103 @@ body {
   }
 }
 
+.faq__container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  padding: 24px;
+  height: 100vh;
+}
+.faq__container .faq__navbar {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid #ffffff;
+  padding: 1rem;
+}
+.faq__container .faq__navbar label {
+  color: #ffffff;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  margin: 1rem;
+}
+.faq__container .faq__navbar label span {
+  color: #0DE5A0;
+}
+.faq__container .faq__navbar label:hover {
+  color: #0DE5A0;
+}
+.faq__container .faq__description {
+  width: 60%;
+  position: relative;
+  padding: 1rem;
+}
+.faq__container .faq__description .article {
+  position: absolute;
+  transition: all 600ms ease;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0.9);
+  padding: 24px;
+  margin: 1rem;
+  color: #ffffff;
+}
+.faq__container .faq__description .article h2 {
+  color: #0DE5A0;
+  margin: 1.2rem 0;
+}
+.faq__container .faq__description .article p {
+  margin: 1rem 0;
+}
+.faq__container .faq__description .article p span {
+  color: #0DE5A0;
+}
+
+#faq_1,
+#faq_2,
+#faq_3,
+#faq_4,
+#faq_5,
+#faq_6,
+#faq_7,
+#faq_8,
+#faq_9,
+#faq_10,
+#faq_11,
+#faq_12 {
+  display: none;
+}
+#faq_1:checked,
+#faq_2:checked,
+#faq_3:checked,
+#faq_4:checked,
+#faq_5:checked,
+#faq_6:checked,
+#faq_7:checked,
+#faq_8:checked,
+#faq_9:checked,
+#faq_10:checked,
+#faq_11:checked,
+#faq_12:checked {
+  box-shadow: 0 0 0 3px orange;
+}
+
+#faq_1:checked ~ .faq__description__1,
+#faq_2:checked ~ .faq__description__2,
+#faq_3:checked ~ .faq__description__3,
+#faq_4:checked ~ .faq__description__4,
+#faq_5:checked ~ .faq__description__5,
+#faq_6:checked ~ .faq__description__6,
+#faq_7:checked ~ .faq__description__7,
+#faq_8:checked ~ .faq__description__8,
+#faq_9:checked ~ .faq__description__9,
+#faq_10:checked ~ .faq__description__10,
+#faq_11:checked ~ .faq__description__11,
+#faq_12:checked ~ .faq__description__12 {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+}
+
 /*# sourceMappingURL=style.css.map */
